--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -88,7 +88,7 @@ show_related = {book = true, page = false, post = true, project = true, publicat
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "ramkrishnanrahul@gmail.com"
+# email = "ramkrishnanrahul@gmail.com"
 # phone = "888 888 88 88"
 
 # Address
