--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -14,7 +14,7 @@ baseurl = "https://rahul-theroboticist.netlify.app/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = ""
+copyright = "&copy 2015 - {year} Rahul R Ramakrishnan, Some rights reserved."
 
 ############################
 ## Advanced options below ##
