--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -161,7 +161,7 @@ sharing = true
 
 # Show a copyright license from creativecommons.org in the site footer?
 # Page specific copyright licenses are also possible by adding this option to a page's front matter.
-copyright_license = {enable = true, allow_derivatives = true, share_alike = true, allow_commercial = false, notice = "My blog posts and research projects are released under a Creative Commons Attribution-ShareAlike 4.0 International License."}
+copyright_license = {enable = true, allow_derivatives = true, share_alike = true, allow_commercial = false, notice = "My blog posts and research projects are released under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License."}
 
 # Abstract length (characters) in the Compact and Portfolio Card list views. Also, see `summaryLength` in `config.toml`.
 abstract_length = 135
