--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,8 +9,8 @@
   weight = 10
 
 [[main]]
-  name = "Blog"
-  url = "#posts"
+  name = "Experience"
+  url = "#talks"
   weight = 20
 
 [[main]]
@@ -19,13 +19,13 @@
   weight = 30
 
 [[main]]
-  name = "Talks"
-  url = "#talks"
+  name = "Publications"
+  url = "#publications"
   weight = 40
 
 [[main]]
-  name = "Publications"
-  url = "#publications"
+  name = "Blog"
+  url = "#posts"
   weight = 50
 
 [[main]]
