--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -62,16 +62,16 @@ highlight_languages = ["r"]  # Add support for highlighting additional languages
 
 # Enable LaTeX math rendering? true/false
 #   If false, you can enable math on a per page basis as needed.
-math = false
+math = true
 
 # Enable diagram rendering? true/false
 #   If false, you can enable diagrams on a per page basis as needed.
-diagram = false
+diagram = true
 
 # Privacy pack
 #   Show a cookie consent message to visitors
 #   Anonymize IP in Google Analytics (if enabled)
-privacy_pack = false
+privacy_pack = true
 
 # Enable visitors to edit pages?
 #   `repo` defines the repository URL. `editable` defines which page types can be edited.
@@ -89,7 +89,7 @@ show_related = {book = true, page = false, post = true, project = true, publicat
 
 # Enter contact details (optional). To hide a field, clear it to "".
 # email = "ramkrishnanrahul@gmail.com"
-# phone = "888 888 88 88"
+# phone = ""
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
@@ -112,8 +112,7 @@ show_related = {book = true, page = false, post = true, project = true, publicat
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "twitter", icon_pack = "fab", name = "Follow Me", link = "https://twitter.com/R_theroboticist"},
-  {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "https://join.skype.com/invite/f6UvyUCYzRxb"},
+  {icon = "twitter", icon_pack = "fab", name = "Follow Me", link = "https://twitter.com/R_theroboticist"},{icon = "skype", icon_pack = "fab", name = "Skype Me", link = "https://join.skype.com/invite/f6UvyUCYzRxb"},
   # {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
   # {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
   # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
@@ -124,7 +123,7 @@ contact_links = [
 ############################
 
 # Default image for social sharing and search engines. Place image in `static/media/` folder and specify image name here.
-sharing_image = ""
+sharing_image = "me"
 
 # Twitter username (without @). Used when a visitor shares your site on Twitter.
 twitter = "R_theroboticist"
