--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -6,7 +6,7 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Rahul R Ramakrishnan"
+title = "Rahul R. Ramachandran"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
@@ -14,7 +14,7 @@ baseurl = "https://rahul-theroboticist.netlify.app/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy 2015 - {year} Rahul R Ramakrishnan, Some rights reserved."
+copyright = "&copy 2015 - {year} Rahul R. Ramachandran, Some rights reserved."
 
 ############################
 ## Advanced options below ##
