--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -48,7 +48,7 @@ local_business_type = ""
 org_name = ""
 
 # Description for social sharing and search engines. If undefined, superuser role is used in place.
-description = "A robotics blog and portfolio by Rahul R Ramakrishnan"
+description = "A robotics blog and portfolio by Rahul R. Ramachandran"
 
 ############################
 ## Site Features
